--- a/To_do_list_app.html
+++ b/To_do_list_app.html
@@ -12,22 +12,12 @@
         <h1 class="topic">
             to do list app
         </h1>
-    
         <div class="input">
             <input type="text" class="mytext">
             <button class="submit">Add</button>
         </div>
-        <p class="demo">
-            
-        </p>
-        <!-- <div class="task">
-            <span class="task_name">rituraj</span>
-            <button class="delete"><i class="far fa-trash-alt"></i></button>
-        </div> -->
+        <p class="demo"></p>
     </div>
-
-    <!-- <button class="delete"><span><i class="far fa-trash-alt"></i></span><p class="sep"><i class="fa-regular fa-pen-to-square"></i></p></button>
-     -->
    
     <script>
 
